Bug 854095 - Remove an unused member from MediaFormatReader - r=jya